--- a/.env
+++ b/.env
@@ -163,3 +163,9 @@ JAEGER_HOST=jaeger
 PROMETHEUS_PORT=9090
 PROMETHEUS_HOST=prometheus
 PROMETHEUS_ADDR=${PROMETHEUS_HOST}:${PROMETHEUS_PORT}
+
+# Faro
+GRAFANA_FARO_ENDPOINT=
+GRAFANA_OTLP_ENDPOINT=
+GRAFANA_INSTANCE_ID=
+GRAFANA_CLOUD_APIKEY=
