--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,9 +8,13 @@
     "start": "node --require ./Instrumentation.js server.js",
     "lint": "next lint",
     "cy:open": "cypress open",
-    "grpc:generate": "mkdir -p ./protos && protoc -I ./pb  --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_opt=esModuleInterop=true --ts_proto_out=./protos --ts_proto_opt=outputServices=grpc-js demo.proto"
+    "grpc:generate": "mkdir -p ./protos && protoc -I ./pb  --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_opt=esModuleInterop=true --ts_proto_out=./protos --ts_proto_opt=outputServices=grpc-js demo.proto",
+    "drone:sign": "drone --server https://drone.grafana.net sign --save grafana/opentelemetry-demo .drone/drone.yml"
   },
   "dependencies": {
+    "@grafana/faro-instrumentation-performance-timeline": "^1.0.5",
+    "@grafana/faro-web-sdk": "^1.0.5",
+    "@grafana/faro-web-tracing": "^1.0.5",
     "@bufbuild/protobuf": "^2.2.3",
     "@grpc/grpc-js": "1.12.6",
     "@openfeature/flagd-provider": "0.13.3",
