--- a/src/fraud-detection/Dockerfile
+++ b/src/fraud-detection/Dockerfile
@@ -17,8 +17,9 @@ FROM gcr.io/distroless/java17-debian11
 ARG OTEL_JAVA_AGENT_VERSION
 WORKDIR /usr/src/app/
 
-COPY --from=builder /usr/src/app/build/libs/fraud-detection-1.0-all.jar ./
-ADD --chmod=644 https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v$OTEL_JAVA_AGENT_VERSION/opentelemetry-javaagent.jar /app/opentelemetry-javaagent.jar
+COPY --from=builder /usr/src/app/build/libs/frauddetectionservice-1.0-all.jar ./
+# we ignore the version (which is from upstream) and use the latest version of the grafana distribution
+ADD --chmod=644 https://github.com/grafana/grafana-opentelemetry-java/releases/latest/download/grafana-opentelemetry-java.jar /usr/src/app/opentelemetry-javaagent.jar
 ENV JAVA_TOOL_OPTIONS=-javaagent:/app/opentelemetry-javaagent.jar
 
 ENTRYPOINT [ "java", "-jar", "fraud-detection-1.0-all.jar" ]
