--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ POSTGRES_IMAGE=postgres:17.3
 PROMETHEUS_IMAGE=quay.io/prometheus/prometheus:v3.2.0
 VALKEY_IMAGE=valkey/valkey:8.1-alpine
 TRACETEST_IMAGE=kubeshop/tracetest:${TRACETEST_IMAGE_VERSION}
+LOKI_IMAGE=grafana/loki:3.4.0
 
 # Demo Platform
 ENV_PLATFORM=local
@@ -154,6 +155,9 @@ VALKEY_ADDR=valkey-cart:${VALKEY_PORT}
 # Grafana
 GRAFANA_PORT=3000
 GRAFANA_HOST=grafana
+
+LOKI_PORT=3100
+LOKI_HOST=loki
 
 # Jaeger
 JAEGER_PORT=16686
