--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@bufbuild/protobuf": "^2.2.3",
+    "@grafana/faro-web-tracing": "^1.14.1",
     "@grpc/grpc-js": "1.12.6",
     "@openfeature/flagd-provider": "0.13.3",
     "@openfeature/flagd-web-provider": "0.7.2",
@@ -25,6 +26,8 @@
     "@opentelemetry/exporter-trace-otlp-grpc": "0.57.2",
     "@opentelemetry/exporter-trace-otlp-http": "0.57.2",
     "@opentelemetry/instrumentation": "0.57.2",
+    "@opentelemetry/instrumentation-document-load": "^0.44.1",
+    "@opentelemetry/instrumentation-user-interaction": "^0.44.1",
     "@opentelemetry/resource-detector-alibaba-cloud": "0.30.1",
     "@opentelemetry/resource-detector-aws": "1.12.0",
     "@opentelemetry/resource-detector-container": "0.6.1",
